--- a/partials/widget-social.hbs
+++ b/partials/widget-social.hbs
@@ -29,12 +29,14 @@
 </div>-->
 <!-- end widget -->
 <div class="widget">
+	<h4 class="title">{{t "Follow"}}</h4>
 	<div class="social-btns">
-		<a class="btn medium" href="#"><i class="fa fa-medium"></i></a>
-		<a class="btn facebook" href="#"><i class="fa fa-facebook"></i></a>
-		<a class="btn twitter" href="#"><i class="fa fa-twitter"></i></a>
-		<a class="btn google" href="#"><i class="fa fa-google"></i></a>
-		<aclass="btn github" href="#"><i class="fa fa-github"></i></a>
-		<a class="btn rss" href="#"><i class="fa fa-rss"></i></a>
+		<a class="btn medium" href="https://hackingandslacking.com"><i class="fab fa-medium"></i></a>
+		<a class="btn facebook" href="https://www.facebook.com/hackersandslackers/"><i class="fab fa-facebook-f"></i>
+		<a class="btn twitter" href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a>
+		<a class="btn tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
+		<a class="btn google" href="https://plus.google.com/communities/106724509785464667119"><i class="fab fa-google"></i></a>
+		<a class="btn github" href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a>
+		<a class="btn rss" href="{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a>
 	</div>
 </div>
