--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -32,7 +32,7 @@
 	}
 	.widget {
 		background: @white;
-		padding: 20px 25px;
+		padding: 20px;
 		@media(max-width: 800px) {
 			padding: 15px 20px !important;
 		}
