--- a/partials/post_footer.hbs
+++ b/partials/post_footer.hbs
@@ -32,7 +32,7 @@
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.js"></script>
 	{{!--{{#has author="Matthew Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}--}}
 	{{> analytics}}
 </body>
