mobile table adjustments

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -41,13 +41,13 @@ code{
 .language-python{
   display: block;
   overflow-x: auto;
-  padding: 1em;
+  padding: .8em;
   color: #166c8b;
   background: #f1f5f8 !important;
   overflow-wrap: break-word;
   margin:0;
   font-size: 1.3em;
-  white-space: pre-wrap;
+  white-space: pre-wrap !important;
   overflow-y: hidden !important;
 
 
