--- a/src/less/code.less
+++ b/src/less/code.less
@@ -14,7 +14,7 @@ pre {
 pre > code,
 &post-content > .hljs {
   background: #f1f5f8 !important;
-  white-space: pre-wrap;
+  white-space: pre-wrap !important;
 
   @media(max-width: 600px) {
     margin-left: calc(~"-50vw + 50%") !important;
@@ -48,8 +48,8 @@ code{
   margin:0;
   font-size: 1.3em;
   white-space: pre-wrap !important;
-  overflow-y: hidden !important;
-
+  overflow-y: scroll !important;
+  max-height: 800px;
 
 
   @media(max-width: 600px) {
