--- a/src/less/code.less
+++ b/src/less/code.less
@@ -49,7 +49,11 @@ code{
   font-size: 1.1em;
   white-space: pre-wrap !important;
   overflow-y: scroll !important;
-  max-height: 800px;
+  max-height: 500px;
+
+  * {
+    font-size :1.1em;
+  }
 
 
   @media(max-width: 600px) {
@@ -63,7 +67,7 @@ code{
 code  {
   padding: 5px;
   background: #f1f5f8;
-  font-size: 13px;
+  font-size: 1.1em;;
   color: #2e9eb7;
   border-radius: 4px;
   margin: 0 5px;
@@ -99,6 +103,7 @@ code  {
 .hljs-attribute,
 .hljs-meta-string {
   color: #47989a !important;
+  font-size: 1.1em;
 }
 
 .hljs-built_in,
