one-off edge cases

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -358,6 +358,10 @@
 		    position: relative;
 		    overflow-x: auto;
 		    white-space: nowrap;
+
+				&:hover{
+					cursor: grab;
+				}
 		  }
 		  table.responsive-table tbody tr {
 		    display: inline-block;
