--- a/src/less/code.less
+++ b/src/less/code.less
@@ -27,11 +27,12 @@ p > code {
   display:inline;
   overflow-y: visible !important;
       width: fit-content;
+      font-size: .9em !important;
 }
 
 code{
   margin:0;
-  font-size: 1.1em;
+
 }
 
 
