--- a/src/less/code.less
+++ b/src/less/code.less
@@ -1,74 +1,71 @@
 pre {
   white-space: pre-wrap;
-    @media(max-width: 600px) {
-      margin-left: calc(~"-50vw + 50%") !important;
-      margin-right: calc(~"-50vw + 50%") !important;
-      width: auto !important;
+  @media(max-width: 600px) {
+    margin-left: calc(~"-50vw + 50%") !important;
+    margin-right: calc(~"-50vw + 50%") !important;
+    width: auto !important;
+    white-space: pre-line !important;
   }
 
-  span{
+  span {
     display: inline-block;
   }
 }
 
-pre > code,
-&post-content > .hljs {
+&post-content > .hljs,
+pre > code {
   background: #f1f5f8 !important;
   white-space: pre-wrap !important;
-
   @media(max-width: 600px) {
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
     overflow-y: hidden !important;
+    white-space: pre-line !important;
   }
 }
 
 p > code {
-  display:inline;
+  display: inline;
   overflow-y: visible !important;
-      width: fit-content;
-      font-size: .9em !important;
+  width: fit-content;
+  font-size: 13px !important;
 }
 
-code{
-  margin:0;
-
+code {
+  margin: 0;
 }
-
-
 
 .hljs,
-.python.hljs,
-.language-python{
+.language-python,
+.python.hljs {
   display: block;
   overflow-x: auto;
-  padding: .8em;
+  padding: 0.8em;
   color: #166c8b;
   background: #f1f5f8 !important;
   overflow-wrap: break-word;
-  margin:0;
-  font-size: 1.1em;
+  margin: 0;
+  font-size: 13px;
   white-space: pre-wrap !important;
   overflow-y: scroll !important;
   max-height: 500px;
 
   * {
-    font-size :1.1em;
+    font-size: 13px;
   }
-
-
   @media(max-width: 600px) {
-    font-size: 1.1em;
+    font-size: 13px;
     padding: 20px;
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
+    white-space: pre-line !important;
   }
 }
 
-code  {
+code {
   padding: 5px;
   background: #f1f5f8;
-  font-size: 1.1em;;
+  font-size: 13px;
   color: #2e9eb7;
   border-radius: 4px;
   margin: 0 5px;
@@ -80,54 +77,54 @@ code  {
 }
 
 .hljs-doctag,
-.hljs-keyword,
-.hljs-formula {
+.hljs-formula,
+.hljs-keyword {
   color: #00b1d5;
   font-weight: 600;
 }
 
-.hljs-section,
-.hljs-name,
-.hljs-selector-tag,
 .hljs-deletion,
+.hljs-name,
+.hljs-section,
+.hljs-selector-tag,
 .hljs-subst {
-  color:#8652c4;
+  color: #8652c4;
 }
 
 .hljs-literal {
   color: #56b6c2;
 }
 
-.hljs-string,
-.hljs-regexp,
 .hljs-addition,
 .hljs-attribute,
-.hljs-meta-string {
+.hljs-meta-string,
+.hljs-regexp,
+.hljs-string {
   color: #47989a !important;
-  font-size: 1.1em;
+  font-size: 13px;
 }
 
 .hljs-built_in,
 .hljs-class .hljs-title {
-  color:#8652c4;
+  color: #8652c4;
 }
 
 .hljs-attr,
-.hljs-variable,
+.hljs-number,
+.hljs-selector-attr,
+.hljs-selector-class,
+.hljs-selector-pseudo,
 .hljs-template-variable,
 .hljs-type,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
+.hljs-variable {
   color: #3fb44b;
 }
 
-.hljs-symbol,
 .hljs-bullet,
 .hljs-link,
 .hljs-meta,
 .hljs-selector-id,
+.hljs-symbol,
 .hljs-title {
   color: #61aeee;
 }
