--- a/src/less/post.less
+++ b/src/less/post.less
@@ -468,7 +468,8 @@
 		}
 	}
 
-	.tableshadow {
+ .tableshadow {
+	 	content: " ";
 		position: absolute;
 		height: 120%;
 		width: 20%;
@@ -476,6 +477,7 @@
 		z-index: 100;
 		right: 0;
 		top: -50px;
+		display: block;
 	}
 
 	.post-head {
