--- a/src/less/post.less
+++ b/src/less/post.less
@@ -464,6 +464,14 @@
 		}
 	}
 
+	div.data-simplebar{
+		@media(max-width: 600px) {
+			margin-left: calc(~"-50vw + 50%") !important;
+			margin-right: calc(~"-50vw + 50%") !important;
+			width: 120%;
+		}
+	}
+
  .tableshadow {
 	 	content: " ";
 		position: absolute;
