--- a/src/less/post.less
+++ b/src/less/post.less
@@ -505,8 +505,8 @@
 		display: block;
 
 		@media(max-width: 600px) {
-			box-shadow: inset -47px -10px 32px 33px rgba(255,255,255,1);
-			right: 0px;
+			box-shadow: inset -47px -10px 59px 20px #fff !important;
+			right: 0;
 		}
 	}
 
