--- a/src/less/post.less
+++ b/src/less/post.less
@@ -322,6 +322,7 @@
 			display: block;
 			position: relative;
 			cellspacing: 0;
+			    overflow: hidden;
 			/* sort out borders */
 			@media (max-width: 600px) {
 				margin-left: calc(~"-50vw + 50%") !important;
@@ -340,6 +341,7 @@
 			margin: 0;
 			vertical-align: top;
 			font-size: 1em;
+			    border-radius: 0;
 		}
 
 		table.responsive-table th {
@@ -353,6 +355,8 @@
 		table.responsive-table thead {
 			display: block;
 			float: left;
+
+			box-shadow: 0 0 20px #9090a9;
 		}
 
 		table.responsive-table thead tr {
@@ -498,7 +502,7 @@
 		position: absolute;
 		height: 120%;
 		width: 20%;
-		box-shadow: inset -47px -10px 65px 34px rgba(255,255,255,0.9);
+		box-shadow: inset -47px -10px 65px 34px rgba(255,255,255,1);
 		z-index: 100;
 		right: 0;
 		top: -50px;
