--- a/src/less/code.less
+++ b/src/less/code.less
@@ -39,7 +39,8 @@ code {
 .language-python,
 .python.hljs {
   display: block;
-  overflow-x: auto;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
   padding: 0.8em;
   color: #166c8b;
   background: #f1f5f8 !important;
@@ -47,7 +48,6 @@ code {
   margin: 0;
   font-size: 13px;
   white-space: pre-wrap !important;
-  overflow-y: scroll !important;
   max-height: 500px;
 
   * {
