--- a/src/less/social.less
+++ b/src/less/social.less
@@ -6,6 +6,10 @@
   transition: all 0.35s;
   transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
   color: #c1c1c1;
+
+  &:hover {
+    cursor:pointer;
+  }
 }
 .social-btns .btn:before {
   top: 150%;
