--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -84,6 +84,12 @@
 
 			input {
 				font-weight: 100;
+				transition: all .3s all;
+
+				&:hover{
+					background: #e5f9ff;
+					border-color: #bbd8e2;
+				}
 			}
 
 			.gh-subscribe-rss {
