post preview links

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -283,6 +283,9 @@
 
 		.post-content {
 			margin: 0;
-		}
+		@media (max-width: 600px){
+			overflow-x: hidden !important;
+                 }
 	}
+}
 }
