--- a/default.hbs
+++ b/default.hbs
@@ -11,6 +11,7 @@
 	{{! Styles }}
 	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
 	<link rel="stylesheet" type="text/css" href="{{asset "/css/includes/fontawesome-all.min.css"}}">
+	<!-- perhaps use this <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
