--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -107,10 +107,10 @@
     }
 
     .column {
-      width: 23%;
-      background: white;
+      width: 21%;
+      background: #fff;
       border: 1px solid #f9f9f9;
-      padding: 30px 30px 35px;
+      padding: 19px;
       position: relative;
       margin-bottom: 7px;
       @media(max-width: 800px) {
@@ -148,24 +148,27 @@
         }
 
         .card {
-          background-color: #f9f9f9;
+          background-color: #fdfdfd;
           padding: 10px 15px;
           position: relative;
           border: 1px solid #f1f1f1;
-          margin-bottom: 10px;
+          margin-bottom: 15px;
           overflow: hidden;
           border-radius: 3px;
+          box-shadow: 1px 3px 4px rgba(0,0,0,0.08);
 
           &.last-child {
             margin-bottom: 0;
           }
 
           h5 {
-            font-size: 1.1em;
-            font-family: 'akzidenz-regular';
+            font-size: 1em;
+            font-family: 'akzidenz';
             color: #3c3d46;
             width: 80%;
             line-height: 1.2;
+            font-weight: 100;
+            margin: 5px 0 20px;
           }
 
           p {
