--- a/author.hbs
+++ b/author.hbs
@@ -1,6 +1,23 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
+{{#author}}
+<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
+<script>
+const client = stitch.Stitch.initializeDefaultAppClient('authors-gwezt');
+
+const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('authors');
+
+client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
+		db.collection('social').find({author: "{{slug}}"}, { limit: 100}).asArray()
+	).then(docs => {
+			console.log("Found docs", docs)
+			authorSidebar(docs)
+	}).catch(err => {
+		console.error(err)
+	});
+</script>
+{{/author}}
 <section class="content-wrap">
 	<div class="container">
 		<div class="row">
@@ -19,19 +36,5 @@
 	</div>
 </section>
 
-<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.0/stitch.js"></script>
-<script>
-  const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
 
-  const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('authors');
-
-  client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>
-    db.collection('social').find({}, { limit: 100}).asArray()
-  ).then(docs => {
-      console.log("Found docs", docs)
-      console.log("[MongoDB Stitch] Connected to Stitch")
-  }).catch(err => {
-    console.error(err)
-  });
-</script>
 <!-- end sites main content area -->
