--- a/src/less/page.less
+++ b/src/less/page.less
@@ -3,6 +3,15 @@
 
 .page-template {
 
+  .post-header {
+    display: none;
+
+    @media(max-width: 800px) {
+      display:block;
+      display: relative;
+    }
+  }
+
   .mobile-branding {
 		float: left;
 		margin: 16px 5px;
