--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -65,14 +65,12 @@ function populateCards(cards, status) {
             '<div class="avatar"><img src="https://www.gravatar.com/avatar/9eb3868db428fb602e03b3059608199b?s=250&d=mm&r=x"></div> \n' +
             '<div class="priority ' + cards[i].priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
           '</div> \n' +
-          '<div class="epic ' + cards[i].epic_name + '"><i class="fas fa-bolt" style=color:' + cards[i].epic_color + ';"></i> <span>' + cards[i].epic_name + '</span></div> \n' +
+          '<div class="epic ' + cards[i].epic_name + '"><span>' + cards[i].epic_name + '</span> <i class="fas fa-bolt" style=color:' + cards[i].epic_color + ';"></i></div> \n' +
         '</div> \n' +
       '</div>');
     }
-    $('#' + status).append('<span class="count">' + cards.length + ' issues total</span>');
+    $('#' + status).append('<span class="count"></span>');
   }
-
-
 
 const backlogColumn = document.getElementById("backlog");
 const todoColumn = document.getElementById("todo");
